src/test/deca/syntax/valid/SansObjet/Inst8-While.deca
// Description:
//    While structure with no instructions.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        while (x) {}
}
